feat: 세븐일레븐 서비스 및 리플레이 체계 추가
